# CMAKELISTS_EXAMPLE

./: CMakeLists.txt  CMakeLists_Demo.md  README.md
include/: mymath.h
src/: mymath.cpp  mymathApp.cpp
